CSS/main.css
/* CSS reference

1. https://www.adam-bray.com ,www.w3schools.com and
2. https://css-tricks.com/three-line-menu-navicon
3. Online Tutorials(Youtube)
4. http://freefrontend.com/css-cards/#card-sliders

body background image from
1. google images
2. https://wall.alphacoders.com/big.php?i=805177&lang=Chinese
*/

*{
    margin:0;
    padding:0;
    text-decoration:none;
}
body{
  position: relative;
  background-image: url("../images/star.jpg")
}


/* Three parts of body 1.header 2.mid_body 3.footer  */

/* ******************************* */
/* *********** Header  *********** */
/* ******************************* */

header{
  position: sticky;
  top:0;
  z-index: 2;
}
/* desktop navigation bar css*/
.logo{
  width:18%;
  margin-top: 5px;
  position:absolute;
}
.desktop_nav{
    position:absolute;
    width: 100%;
    background-color: #19181A;
    padding-left: 50px;
    box-sizing:border-box;
    height:80px;
    display: none;
}
.desktop_nav .desktop_nav_btn{
    display: inline-block;
    padding:0 15px;
    line-height: 72px;
    transition: 0.5s;
    height:80px;
    float:right;
}
.desktop_nav > div:first-child desktop_nav_btn{
    margin-right: 30px;
}
.breadcrumb{
  background-color: #66FCF1;
  height:2px;
  margin-top: -20px;
}

.desktop_nav .desktop_nav_btn a{
    color:#cecece;
    text-decoration:none;
    font-family: 'Anton',"Arial Black", Gadget, sans-serif;
    text-transform:none;
    font-size: 20px;
    letter-spacing:1px;
}
.desktop_nav  .desktop_nav_btn:hover a{
    color:#66FCF1;
}
.desktop_nav .desktop_nav_btn:hover{
    background: #263c69;
}
/* mobile nav & menu*/
.mobile_nav{
    width:100%;
    background-color: #000000;
    padding:10px 30px;
    box-sizing:border-box;
    display:block;
    height:80px;
}
.mobile_nav .logo{
    font-size: 50px;
    position:absolute;
    top:10px;
    text-decoration:none;
}
.mobile_nav .logo a{
    color:white;
}
.mobile_nav .menu {
    color:white;
    float:right;
    padding: 5px 10px;
}
.sidemenu{
    font-family: 'Oswald', sans-serif;
    height: 100%;
    width: 0;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    background-color: #0f0f0f;
    overflow-x: hidden;
    padding-top: 60px;
    text-align:center;
    transition: 0.5s;
    line-height: 40px;
}
.sidemenu .sidemenu_close{
    text-decoration: none;
    position: absolute;
    color:white;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

.sidemenu  .side_dropdown_btn a{
      text-decoration: none;
      color: #cecece;
      font-size: 25px;
      transition: 0.3s;
      width:60%;
      box-sizing: border-box;
}
.sidemenu  .side_dropdown_btn a:hover{
      color: #66FCF1;
}

/***** Mobile hamburger icon *****/
.hamburger{
  height:32px;
  width:35px;
}
.hamburger:hover .burger_line, .hamburger:hover .burger_line_1{
  background-color:#66FCF1;
}
.burger_line_1, .burger_line{
  background-color: white;
  width: 35px;
  height:5px;
}
.burger_line{
  margin-top: 7px;
}

/* ******************************* */
/* ************ Body  ************ */
/* ******************************* */
.main_body{
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  background-color: #2eb6d0;
  background-size: cover;
  box-shadow: 0px 0px 30px 5px #66FCF1;
  border-left: 2px solid #66FCF1;
  border-right: 2px solid #66FCF1;

}
.main_body .mid_body{
  width:100%;
  overflow: hidden;
}

.page_image{
  width:100%;
  margin-top: 0px;
  margin-bottom: 0px;
  position: sticky;
  top:0;
  z-index: 0;
}

.booknow{
  width:100%;
  height:200px;
  background-position: center;
  background-size: cover;
  border-radius: 10px 10px 0 0;
}

/* ************************************ */
/* ************ Container  ************ */
/* ************************************ */
.container{
  font-family: 'Anton',"Arial Black", Gadget, sans-serif;
  width:100%;
  box-sizing: border-box;
  letter-spacing:2px;
}

.container .box{
  position: relative;
  width:100%;
  height:250px;
  float:none;
  transition:.5s;
}

.container .box .box_img {
  position: absolute;
  width: 100%;
  height: 250px;
  overflow: hidden;
}

.container .box:nth-child(1) .details{
      background-color: #345798;
}
.container .box:nth-child(2) .details{
      background-color: #a33327;
}
.container .box:nth-child(3) .details{
      background-color: #4e0c77;
}
.container .box:nth-child(4) .details{
      background-color: #2d8a57;
}

.container .box .details{
      position: absolute;
      width: 100%;
      height: 250px;
      overflow: hidden;
      background-color: #262626;
}
.container .box .details .content{
      position: absolute;
      top:25%;
      width: 100%;
      padding: 0 20px;
      box-sizing: border-box;
      text-align: center;
      transition:0.5s;

}
.container .box .details .content h3{
      color:#fff;
      font-size: 30px;
      padding-top: 20px;
}
.container .box .details .content a{
      display: inline-block;
      padding:5px 20px;
      color:#fff;
      border:2px solid #fff;
      text-decoration: none;
      transition: 0.5s;
      border-radius: 20px;
}
.container .block{
  width:100%;
  background-color: #a33327;
}


.non_card_container{
  width:100%;
  height: auto;
  color: white;
  font-family: 'Montserrat', sans-serif;
  text-align: center;
}
.non_card_container h1{
  font-size: 45px;
}

.left{
  width:calc(100% - 4);
  background-color: #000000;
  border-radius: 20px;
  border: 2px solid #66FCF1;
}

.left h1{
  padding:20px;
}

.left img{
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 20px 0px;
}
.right{
  width:calc(100% - 4);
  background-color: #050b2b;
  border-radius: 20px;
  border: 2px solid #66FCF1;
}
.right h1{
  padding:20px;
}
.right img{
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 20px 0px;
}
/* ... */

